# Axiom_2.0

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  chainlit.md  chainlit.yaml  chainlit_ui.py  cli.py  mcp.json  pyproject.toml
.chainlit/: config.toml
.github/: README.md
public/: theme.json
src/axiom/: agent.py  config.py  prompts.py
